# cyclotom-fast

./: .gitignore  README.md  requirements.txt  setup.cfg
cyclotomfast/: sps4.py  test_sps4.py
documents/: SPS4_64.c  TER-soutenance-cyclotomfast-jpmerx.tex  jpmerx-polynoms-cyclotomics.tex
documents/images/: cyclotomic-highperf-sps4.eps
tests/: test_sps4.py
utils/: tests.py
