[metadata]
name = cyclotomfast
version = 0.1.0
author = Jean-Philippe Merx
author_email = Jean-Philippe.Merx@etu.sorbonne-universite.fr
summary = Fast cyclotomic polynomials computation
home_page = https://github.com/jpmjpmjpm/cyclotom-fast
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
platforms=['any']
classifier =
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.10
python_requires = >=3.6
keywords =
    math

[options]
include_package_data=True,
packages=cyclotomfast

[options.package_data]
* = *.txt, *.rst, *.md
